--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
   <h1>👀 این سایت مخصوص آدمای ضعیف نیست!</h1>
   <p>🚀 ساخته شده توسط علی سام</p>
   <p id="clickMe">(فقط یه شاخ می‌تونه اینو لمس کنه)</p>
-  <div id="message">😂خسته نباشی پهلوان</div>
+  <div id="message">😂خسته نباشی پهلوان
+  شما با کمال احترام ایستگاه شدید با سپاس علی سام مردی</div>
 
   <script>
     const clickMe = document.getElementById('clickMe');
